# events-aggregator

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_full_schema.py  67ef4c7014b5_initial.py
src/: main.py
src/api/routes/: events.py  health.py  sync.py
src/application/services/: event_service.py
src/core/: config.py  db.py
src/domain/: models.py
src/domain/repositories/: event_repository.py
src/domain/schemas/: event.py
src/infrastructure/clients/: events_provider.py  paginator.py
src/infrastructure/db/: session.py
src/infrastructure/db/repositories/: event_repository.py  sync_repository.py  ticket_repository.py
src/services/: sync_service.py
src/usecases/: tickets.py
tests/: test_events_provider_client.py  test_paginator.py
