[project]
name = "events-aggregator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "httpx",
    "pydantic",
    "alembic",
    "python-dotenv",
    "greenlet>=3.3.2",
    "psycopg2-binary>=2.9.11",
]

[tool.ruff]
line-length = 100
