[project]
name = "events-aggregator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "httpx",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "pydantic[email]",
    "alembic",
    "python-dotenv",
    "greenlet>=3.3.2",
    "aiohttp==3.9.5",
    "psycopg2-binary>=2.9.11",
]

[tool.ruff]
line-length = 100
